<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="17dp"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/nintendo_switch_logo"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_below="@+id/logo"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:hint="@string/hint_name"
        />
    <EditText
        android:layout_below="@+id/et_name"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_telefono"
        android:hint="@string/Teléfono"
        />
    <EditText
        android:layout_below="@+id/et_telefono"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_twitter"
        android:hint="@string/Twitter"
        />
    <EditText
        android:layout_below="@+id/et_twitter"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:hint="@string/Email"
        />
    <EditText
        android:layout_below="@+id/et_email"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/bt_login"
        android:layout_below="@id/et_password"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/entrar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        />



</RelativeLayout>